--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.11",
     "expo-network": "~8.0.8",
+    "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.21",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
@@ -34,6 +35,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
