--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "expo": "~54.0.31",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.13",
